--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@szhsin/react-menu": "^2.3.2",
+    "mailgo": "^0.12.2",
+    "next": "^12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0",
+    "regexify-string": "^1.0.17"
   },
   "devDependencies": {
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
+    "@svgr/webpack": "^6.2.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.4"
-  }
+  },
+  "version": "1.0.1"
 }
