--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@szhsin/react-menu": "^2.3.2",
-    "mailgo": "^0.12.2",
     "next": "^12.1.0",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.0",
     "react-images-viewer": "^1.7.1",
     "react-photo-gallery": "^8.0.0",
-    "regexify-string": "^1.0.17"
+    "react-toastify": "^8.2.0",
+    "regexify-string": "^1.0.17",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.0",
